<?xml version="1.0" encoding="utf-8"?>
<com.zhy.android.percent.support.PercentLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="5dp"
    android:orientation="vertical">

    <com.zhy.android.percent.support.PercentRelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_heightPercent="60%h">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@mipmap/play_image" />

        <ImageView
            android:id="@+id/player2_photo_show"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@mipmap/tuoluo_open_bg"
            app:layout_heightPercent="86%"
            app:layout_marginLeftPercent="10%"
            app:layout_marginTopPercent="7%"
            app:layout_widthPercent="80%" />

        <ImageView
            android:id="@+id/player2_tuoluo_show"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@mipmap/tuoluo"
            app:layout_heightPercent="86%"
            app:layout_marginLeftPercent="25%"
            app:layout_marginTopPercent="7%"
            app:layout_widthPercent="50%"
            android:visibility="invisible"/>
        <ImageView
            android:id="@+id/vs_player2_result"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="5dp"
            android:src="@mipmap/vs_win"
            android:visibility="invisible"
            app:layout_heightPercent="20%"
            app:layout_marginBottomPercent="5%"
            app:layout_widthPercent="45%" />

    </com.zhy.android.percent.support.PercentRelativeLayout>


    <com.zhy.android.percent.support.PercentRelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        app:layout_heightPercent="15%">

        <com.makeramen.roundedimageview.RoundedImageView
            android:id="@+id/iv_vs_content_player2"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_centerHorizontal="true"
            android:src="@mipmap/play_fight_big"
            app:layout_heightPercent="100%"
            app:layout_widthPercent="100%h"
            app:riv_border_color="#00ff00ff"
            app:riv_border_width="@dimen/round_width"
            app:riv_oval="true" />

        <com.zhy.android.percent.support.PercentLinearLayout
            android:id="@+id/vs_player2_info"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:visibility="invisible"
            app:layout_heightPercent="100%"
            app:layout_widthPercent="100%">

            <com.zhy.android.percent.support.PercentLinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="horizontal"
                app:layout_widthPercent="50%">

                <com.makeramen.roundedimageview.RoundedImageView
                    android:id="@+id/vs_player2_roundedImageView"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:scaleType="fitXY"
                    android:src="#ffffff"
                    app:layout_heightPercent="80%"

                    app:layout_widthPercent="80%h"
                    app:riv_border_color="@color/fuchsia"
                    app:riv_border_width="3dp"
                    app:riv_mutate_background="true"
                    app:riv_oval="true" />

            </com.zhy.android.percent.support.PercentLinearLayout>


            <com.zhy.android.percent.support.PercentLinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"


                app:layout_widthPercent="50%">

                <com.aofei.tch.anagyre.other.widget.PercentTextView

                    android:id="@+id/vs_player2_name"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="@string/connect_noplayer"
                    android:textSize="35px"
                    app:baseScreenHeight="1200"
                    app:layout_heightPercent="30%"
                    app:layout_marginTopPercent="5%" />

                <com.aofei.tch.anagyre.other.widget.PercentTextView
                    android:id="@+id/vs_player2_ID"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="@string/connect_id"
                    android:textSize="35px"
                    app:baseScreenHeight="1200"
                    app:layout_heightPercent="30%" />

                <com.aofei.tch.anagyre.other.widget.PercentTextView
                    android:id="@+id/vs_player2_exp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="@string/connect_exp"
                    android:textSize="35px"
                    app:baseScreenHeight="1200"

                    app:layout_heightPercent="30%" />
            </com.zhy.android.percent.support.PercentLinearLayout>
        </com.zhy.android.percent.support.PercentLinearLayout>
    </com.zhy.android.percent.support.PercentRelativeLayout>

    <Button
        android:id="@+id/btn_fragment_vs_reset"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/shape_btn_start"
        android:text="@string/vs_reset"
        app:layout_heightPercent="10%"
        app:layout_marginTopPercent="8%"
        app:layout_widthPercent="25%h" />
</com.zhy.android.percent.support.PercentLinearLayout>